cleanup and bug fixes. Boil fermentable additions. etc